--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         <h1 class="header">Scidash</h1>
-        <p class="header">The Data-driven model validation and visualization project</p>
+        <p class="header">The data-driven model validation and visualization project</p>
 
 
 
