Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Scidash by scidash</title>
+    <title>SciDash by scidash</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Scidash</h1>
+        <h1 class="header">SciDash</h1>
         <p class="header">The data-driven model validation and visualization project</p>
 
 
@@ -28,7 +28,7 @@
       </header>
       <section>
         <h3>
-<a id="scidash-aims-to-make-validation-of-scientific-models-against-experimental-data-easy-transparent-and-continuously-integrated-into-the-model-development-process" class="anchor" href="#scidash-aims-to-make-validation-of-scientific-models-against-experimental-data-easy-transparent-and-continuously-integrated-into-the-model-development-process" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Scidash aims to make validation of scientific models against experimental data easy, transparent, and continuously integrated into the model development process.</h3>
+<a id="scidash-aims-to-make-validation-of-scientific-models-against-experimental-data-easy-transparent-and-continuously-integrated-into-the-model-development-process" class="anchor" href="#scidash-aims-to-make-validation-of-scientific-models-against-experimental-data-easy-transparent-and-continuously-integrated-into-the-model-development-process" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>SciDash aims to make validation of scientific models against experimental data easy, transparent, and continuously integrated into the model development process.</h3>
 
 <h3>
 <a id="" class="anchor" href="#" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><a href="http://sciunit.scidash.org"><img src="https://raw.githubusercontent.com/scidash/assets/master/logos/sciunit.png" width="200"></a>
